# mcp

./: .gitignore  CMakeLists.txt  engine.cpp  engine.cpp:Zone.Identifier  engine.h  engine.h:Zone.Identifier  fen.cpp  fen.h  heuristics.h  main.cpp  main_st.cpp  openingbook.cpp  openingbook.h  polyglot_random.cpp  san.cpp  san.h  san_pgn.cpp  san_pgn.h  search-mt-copy.cpp  search.cpp  search.h  test_alphabetaTimed.cpp  test_escape_check.cpp  test_fen_roundtrip.cpp  test_move_evaluations.cpp  test_move_search_ranked.cpp  test_move_search_ranked_mt.cpp  test_mt_diagnostics.cpp  test_openingbook.cpp  test_polyglot_key.cpp  test_sanFromMove.cpp  test_uci_integration.cpp  thread_context.cpp  thread_context.h  threadpool.cpp  threadpool.h  uci.cpp  uci.h  uci_deterministic.cpp  uci_root_merge.h  (+1 more)
